added forgot password

--- a/storio1/src/styles/globals.css
+++ b/storio1/src/styles/globals.css
@@ -67,10 +67,10 @@ align-items: flex-end;
 color: #D9D9D9;
 } */
 
-*/ .login-buttons {
+/* .login-buttons {
   /* background-color: red; */
 
-}
+
 
 /* .button {
 
