--- a/storio1/src/styles/globals.css
+++ b/storio1/src/styles/globals.css
@@ -7,9 +7,6 @@
   padding: 0;
   margin: 0;
   font-family: 'Poppins', sans-serif;
-
-
-
 }
 
 body {
@@ -113,3 +110,8 @@ color: #D9D9D9;
 /* .button__icon {
   font-size: 1.5em;
 } */
+
+#sidebar-hidden {
+  display: none;
+}
+
