--- a/storio1/src/styles/globals.css
+++ b/storio1/src/styles/globals.css
@@ -155,3 +155,27 @@ color: #D9D9D9;
 .animate-emerge {
   animation: emerge 0.5s ease-out forwards, leave 0.5s ease-in forwards 3s;
 }
+
+/* Define the animation */
+@keyframes scale {
+  0% {
+    transform: scaleX(100%);
+  }
+  50% {
+    transform: scaleX(110%);
+  }
+  100%{
+    transform: scaleX(100%);
+  }
+}
+
+/* Apply the animation to an element */
+.scale-in-out {
+  animation-name: scale;
+  animation-duration: .3s;
+  animation-timing-function: ease-in-out;
+  animation-direction: normal;
+  -o-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+}
+
