--- a/storio1/src/styles/globals.css
+++ b/storio1/src/styles/globals.css
@@ -155,7 +155,9 @@ color: #D9D9D9;
 .animate-emerge {
   animation: emerge 0.5s ease-out forwards, leave 0.5s ease-in forwards 3s;
 }
-
+.animate-emerge-confirm-popup {
+  animation: emerge 0.5s ease-out forwards;
+}
 /* Define the animation */
 @keyframes scale {
   0% {
