--- a/storio1/src/styles/globals.css
+++ b/storio1/src/styles/globals.css
@@ -1,7 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 
 * {
   padding: 0;
